--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,26 @@
-version: "3"
+version: '3'
 
 services:
-  nginx:
-    container_name: tbb-nginx
-    build:
-      context: .
-      dockerfile: ./nginx/Dockerfile
+  tbb-deploy-nginx:
+    container_name: tbb-prod-nginx
+    build: nginx
+    image: tbb-image-nginx
+    # volumes:
+    #   - ./nginx.conf:/etc/nginx/nginx.conf
     ports:
-      - "80:80"
+      - 80:80
+      - 3001:3001
     depends_on:
-      - beego
-      - mongodb
-    restart: unless-stopped
-    tty: true
-
-  beego:
-    build:
-      context: .
-      dockerfile: ./be/Dockerfile
-      target: beego1
-    container_name: tbb-be
-    image: beego1
+      - tbb-prod-beego
+      # - tbb-prod-fe
+  tbb-prod-beego:
+    build: tre-booking-be
+    container_name: tbb-prod-be
+    image: tbb-image-beego
     volumes:
-      - ../tre-booking-be/server:/go/src/beego
+      - ./tre-booking-be/server:/go/src/beego
     ports:
-      - "8080:8080"
+      - '8080:8080'
     depends_on:
       - mongodb
     working_dir: /go/src/beego
@@ -34,18 +30,23 @@ services:
     restart: unless-stopped
     tty: true
   mongodb:
-    image : mongo:6.0.3
-    container_name: tbb-db
+    image: mongo:6.0.3
+    container_name: tbb-prod-db
     environment:
       - MONGO_INITDB_ROOT_USERNAME=root
       - MONGO_INITDB_ROOT_PASSWORD=c6MV5hvJebRn7KXa
     volumes:
       - db:/data/db
     ports:
-    - 27017:27017
+      - 27017:27017
     restart: unless-stopped
     tty: true
     # run following command to interact with server mongodb: docker exec -it tre-booking-mongodb mongosh
+  tbb-prod-fe:
+    build: tre-booking-fe
+    container_name: tbb-prod-fe
+    ports:
+      - '3000:3000'
 
 volumes:
   db:
