--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,4 +1,2 @@
-
-FROM nginx:alpine
-EXPOSE 80
-COPY nginx.conf /etc/nginx/nginx.conf
+FROM nginx:alpine as tbb-image-nginx
+COPY nginx.conf /etc/nginx/conf.d/default.conf
