--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "tre-booking-be"]
 	path = tre-booking-be
-	url = git@github.com:vanh01/tre-booking-be.git
+	url = git@github.com:hoangnc1709/bpe-be.git
 [submodule "tre-booking-fe"]
 	path = tre-booking-fe
 	url = git@github.com:ngochienhv/che-booking-fe.git
